# paper-agent

./: .gitignore  README.md  pyproject.toml  test_app.py
backend/: .env.example
backend/alembic/: env.py
backend/alembic/versions/: 5014219c9a30_create_initial_database_models.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  users.py
backend/app/core/: celery_app.py  config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  base.py  email_config.py  keyword.py  paper.py  user.py
backend/app/schemas/: __init__.py  user.py
backend/app/utils/: deps.py  exceptions.py
docs/: Implementation-Plan.md  development-progress.md
